feat: atualização dos testes unitários

--- a/src/app/module/about/about.component.html
+++ b/src/app/module/about/about.component.html
@@ -21,8 +21,8 @@
   <br />
   <p>The app uses the following technologies:</p>
   <ul>
-    <li><strong>Angular 14+</strong></li>
-    <li><strong>PokeAPI</strong></li>
+    <li><strong>Angular 14</strong></li>
+    <li><strong>PokéAPI</strong></li>
   </ul>
   <br />
   <p>
