--- a/src/app/module/header/header.component.html
+++ b/src/app/module/header/header.component.html
@@ -1,5 +1,5 @@
 <main>
-  <img src="../../assets/pokemon.png">
+  <a class="logo" routerLink="/"><img src="../../assets/pokemon.png"></a>
 
   <nav class="links">
     <a routerLink="/">Home</a>
