--- a/src/app/module/pokecard/pokecard.component.html
+++ b/src/app/module/pokecard/pokecard.component.html
@@ -1,25 +1,23 @@
 <main>
-  <div
-    class="container"
-    *ngFor="
-      let item of pokeList | paginate
-          : {
-              itemsPerPage: limit,
-              currentPage: page,
-              totalItems: totalItems
-            }; let i = index"
-  >
-    <h1>
-      <a [routerLink]="['/pokelist/', item.url.split('/')[6]]">{{
-        item.name.toUpperCase()
-      }}</a>
-    </h1>
+  <div class="input">
+    <input
+      type="text"
+      [(ngModel)]="searchText"
+      (ngModelChange)="filterData()"
+      placeholder="Search pokemons"
+    />
+  </div>
+  <div class="container-wrapper" *ngIf="filterArray?.length; else noData">
+    <div class="container" *ngFor="let item of filterArray">
+      <h1>
+        <a [routerLink]="['/pokelist/', item.url.split('/')[6]]">{{
+          item.name.toUpperCase()
+        }}</a>
+      </h1>
+    </div>
   </div>
 
-  <pagination-controls
-    previousLabel="Previous"
-    nextLabel="Next"
-    [responsive]="true"
-    (pageChange)="page = $event"
-  ></pagination-controls>
+  <ng-template #noData>
+    <h1 class="container-phrase">There's no pokemons.</h1>
+  </ng-template>
 </main>
