--- a/src/app/module/pokecard/pokecard.component.scss
+++ b/src/app/module/pokecard/pokecard.component.scss
@@ -1,5 +1,4 @@
-.container,
-footer {
+.container {
   display: flex;
   text-align: center;
   justify-content: center;
@@ -7,8 +6,34 @@ footer {
   font-family: "Roboto", sans-serif;
 }
 
-main {
-  margin-top: 160px;
+.input {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 0;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  top: 120px;
+  height: 50px;
+  background-color: #f3f3f3;
+}
+
+.input input {
+  border: none;
+  border-radius: 8px;
+  text-align: center;
+  padding: 10px;
+  box-sizing: border-box;
+  width: 50%;
+}
+
+main{
+  padding-top: 200px;
+}
+
+input[placeholder] {
+  font-family: "Roboto", sans-serif;
 }
 
 .container h1 a {
@@ -20,9 +45,22 @@ main {
   text-decoration: underline;
 }
 
-pagination-controls {
-  text-align: right;
-  color: #000;
+.container-phrase {
+  text-align: center;
   font-family: "Roboto", sans-serif;
-  margin: 0 auto;
+  color: red;
+}
+
+@media screen and (max-width: 375px) {
+  .input{
+    top: 240px;
+  }
+
+  main{
+    padding-top: 320px;
+  }
+
+  .container-phrase {
+    font-size: 24px;
+  }
 }
